--- a/waybar/style.css
+++ b/waybar/style.css
@@ -6,6 +6,12 @@ window#waybar {
 background-color: rgba(0, 0, 0, 0);
 }
 
+tooltip {
+background-color: rgba(40, 44, 52, 0.92);
+border: 2px solid #ABB2BF;
+margin-top: 0;
+}
+
 .modules-right, .modules-left {
 background-color: #282C34;
 color: #F6F7F9;
@@ -54,6 +60,9 @@ border-radius: 10px;
 background-image: linear-gradient(135deg, #E06C75, #C678DD);
 }
 
+#pulseaudio {
+padding-top: 3px;
+}
 #clock {
 color: #61AFEF;
 }
