--- a/wofi/style.css
+++ b/wofi/style.css
@@ -1,37 +1,30 @@
 window {
-/* background-color: #21252B; */
-/* margin: 5px; */
-/* padding: 5px, 5px, 5px 5px; */
-/* background-color: red; */
-border-radius: 2px;
-background-image: linear-gradient(135deg, #98C379, #C678DD);
+border-radius: 3px;
 }
 
 #input {
 font-family: Hack Nerd Font;
-/* margin: 5px; */
-border: 2px solid #21252B;
-background-color: #282C34;
+font-size: 14px;
+margin-bottom: 3px;
+border: none;
+outline: none;
 box-shadow: none;
+border-radius: 0;
+background-color: #282C34;
 color: #F6F7F9;
 }
 
 #inner-box {
-/* margin: 5px; */
-padding: 5px;
-border: 2px solid #21252B;
 background-color: #282C34;
 }
 
 #outer-box {
-margin: 2px;
-border: 2px solid #21252B;
-background-color: #21252B;
+padding: 2px;
+border-radius: 3px;
+background-image: linear-gradient(135deg, #98C379, #C678DD);
 }
 
 #scroll {
-/* margin: 5px; */
-border: 2px solid #21252B;
 background-color: #21252B;
 }
 
@@ -39,11 +32,13 @@ background-color: #21252B;
 font-family: Hack Nerd Font;
 margin: 5px;
 color: #F6F7F9;
-/* border: 2px solid cyan; */
-/* background-color: cyan; */
 } 
 
+#entry {
+font-size: 14px;
+color: #F6F7F9;
+}
+
 #entry:selected {
-background-color: #323842;
-border: 1px solid #61AFEF;
+background-color: #61AFEF;
 }
