--- a/wlogout/style.css
+++ b/wlogout/style.css
@@ -13,38 +13,14 @@ button {
   margin: 10px;
   border-radius: 50px;
   box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.75);
-  /* background-repeat: no-repeat; */
-  /* background-position: center; */
-  /* background-size: 25%; */
 }
 
-button:focus,
 button:active,
 button:hover {
   background-color: #61afef;
   outline-style: none;
 }
-
-/* #lock { */
-/*     background-image: image(url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png")); */
-/* } */
-/**/
-/* #logout { */
-/*     background-image: image(url("/usr/share/wlogout/icons/logout.png"), url("/usr/local/share/wlogout/icons/logout.png")); */
-/* } */
-/**/
-/* #suspend { */
-/*     background-image: image(url("/usr/share/wlogout/icons/suspend.png"), url("/usr/local/share/wlogout/icons/suspend.png")); */
-/* } */
-/**/
-/* #hibernate { */
-/*     background-image: image(url("/usr/share/wlogout/icons/hibernate.png"), url("/usr/local/share/wlogout/icons/hibernate.png")); */
-/* } */
-/**/
-/* #shutdown { */
-/*     background-image: image(url("/usr/share/wlogout/icons/shutdown.png"), url("/usr/local/share/wlogout/icons/shutdown.png")); */
-/* } */
-/**/
-/* #reboot { */
-/*     background-image: image(url("/usr/share/wlogout/icons/reboot.png"), url("/usr/local/share/wlogout/icons/reboot.png")); */
-/* } */
+button:focus {
+  outline-style: none;
+  box-shadow: 0px 0px 5px 3px rgba(97, 175, 239, 0.75);
+}
