switch kitty terminal and fish shell

--- a/wlogout/style.css
+++ b/wlogout/style.css
@@ -1,6 +1,6 @@
 * {
   background-image: none;
-  font-family: Hack Nerd Font;
+  font-family: JetBrainsMono Nerd Font;
   font-size: 50px;
 }
 window {
