--- a/waybar/style.css
+++ b/waybar/style.css
@@ -3,12 +3,12 @@
   font-size: 14px;
 }
 window#waybar {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(27, 30, 36, 0.8);
 }
 
 tooltip {
   background-color: rgba(40, 44, 52, 0.92);
-  border: 2px solid #abb2bf;
+  /* border: 2px solid #abb2bf; */
   margin-top: 0;
 }
 
@@ -16,7 +16,7 @@ tooltip {
 .modules-left {
   background-color: rgba(40, 44, 52, 0.8);
   color: #f6f7f9;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   padding: 0 20px;
 }
 .modules-left {
@@ -39,7 +39,7 @@ tooltip {
   font-size: 18px;
 }
 #workspaces button:first-child {
-  border-radius: 10px 0 0 10px;
+  /* border-radius: 10px 0 0 10px; */
 }
 #workspaces button.active {
   color: #21252b;
@@ -69,7 +69,7 @@ tooltip {
   color: #21252b;
   padding: 0 20px;
   font-weight: bold;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 #mpris.paused {
   background-image: linear-gradient(135deg, #e06c75, #c678dd);
